# controllers/fileupload/cont_file_upload.go
@@ -32,7 +32,7 @@ func NewContFileUpload(e *echo.Echo, useSaFileUpload ifileupload.UseCase) {
 	}
 
 	e.Static("/wwwroot", "wwwroot")
-	r := e.Group("/api.v1/fileupload")
+	r := e.Group("/fileupload")
 	// Configure middleware with custom claims
 	r.Use(midd.Versioning)
 	r.Use(midd.JWT)
@@ -52,7 +52,7 @@ func NewContFileUpload(e *echo.Echo, useSaFileUpload ifileupload.UseCase) {
 // @Param upload_file formData file true "account image"
 // @Param path formData string true "path images"
 // @Success 200 {object} tool.ResponseModel
-// @Router /api.v1/fileupload [post]
+// @Router /fileupload [post]
 func (u *ContFileUpload) CreateImage(e echo.Context) (err error) {
 	ctx := e.Request().Context()
 	if ctx == nil {
