# controllers/paket/cont_paket.go
@@ -23,7 +23,7 @@ func NewContPaket(e *echo.Echo, a ipakets.Usecase) {
 		usePaket: a,
 	}
 
-	r := e.Group("/api.v1/capster/paket")
+	r := e.Group("/capster/paket")
 	r.Use(midd.JWT)
 	r.GET("/:id", controller.GetDataBy)
 	r.GET("", controller.GetList)
@@ -39,7 +39,7 @@ func NewContPaket(e *echo.Echo, a ipakets.Usecase) {
 // @Param Version header string true "OS Device"
 // @Param id path string true "ID"
 // @Success 200 {object} tool.ResponseModel
-// @Router /api.v1/capster/paket/{id} [get]
+// @Router /capster/paket/{id} [get]
 func (u *ContPaket) GetDataBy(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -78,7 +78,7 @@ func (u *ContPaket) GetDataBy(e echo.Context) error {
 // @Param initsearch query string false "InitSearch"
 // @Param sortfield query string false "SortField"
 // @Success 200 {object} models.ResponseModelList
-// @Router /api.v1/capster/paket [get]
+// @Router /capster/paket [get]
 func (u *ContPaket) GetList(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
